<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp">

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:paddingStart="4dp"
            android:paddingTop="4dp"
            android:paddingEnd="4dp"
            android:paddingBottom="4dp"
            app:columnCount="2"
            app:columnOrderPreserved="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rowCount="4">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/bean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:clipToPadding="false"
                android:focusable="true"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                android:onClick="viewCrops">

                <com.tolstykh.textviewrichdrawable.TextViewRichDrawable
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/beans"
                    android:gravity="center"
                    android:text="@string/bean_family"
                    android:textAppearance="?android:textAppearanceLarge"
                    app:compoundDrawableWidth="150dp" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/beet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:clipToPadding="false"
                android:focusable="true"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                android:onClick="viewCrops">

                <com.tolstykh.textviewrichdrawable.TextViewRichDrawable
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/beet"
                    android:gravity="center"
                    android:text="@string/beetroot_family"
                    android:textAppearance="?android:textAppearanceLarge"
                    app:compoundDrawableWidth="150dp"/>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/brassica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:clipToPadding="false"
                android:focusable="true"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                android:onClick="viewCrops">

                <com.tolstykh.textviewrichdrawable.TextViewRichDrawable
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/cabbage"
                    android:gravity="center"
                    android:text="@string/cabbage_family"
                    android:textAppearance="?android:textAppearanceLarge"
                    app:compoundDrawableWidth="150dp"/>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/carrot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:clipToPadding="false"
                android:focusable="true"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                android:onClick="viewCrops">

                <com.tolstykh.textviewrichdrawable.TextViewRichDrawable
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/carrot"
                    android:gravity="center"
                    android:text="@string/carrot_family"
                    android:textAppearance="?android:textAppearanceLarge"
                    app:compoundDrawableWidth="150dp"/>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/daisy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:clipToPadding="false"
                android:focusable="true"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                android:onClick="viewCrops">

                <com.tolstykh.textviewrichdrawable.TextViewRichDrawable
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/lettuce"
                    android:gravity="center"
                    android:text="@string/daisy_family"
                    android:textAppearance="?android:textAppearanceLarge"
                    app:compoundDrawableWidth="150dp"/>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cucurbit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:clipToPadding="false"
                android:focusable="true"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                android:onClick="viewCrops">

                <com.tolstykh.textviewrichdrawable.TextViewRichDrawable
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/cucumber"
                    android:gravity="center"
                    android:text="@string/melon_family"
                    android:textAppearance="?android:textAppearanceLarge"
                    app:compoundDrawableWidth="150dp"/>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/onion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:clipToPadding="false"
                android:focusable="true"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                android:onClick="viewCrops">

                <com.tolstykh.textviewrichdrawable.TextViewRichDrawable
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/onion"
                    android:gravity="center"
                    android:text="@string/onion_family"
                    android:textAppearance="?android:textAppearanceLarge"
                    app:compoundDrawableWidth="150dp"/>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/potato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:clipToPadding="false"
                android:focusable="true"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                android:onClick="viewCrops">

                <com.tolstykh.textviewrichdrawable.TextViewRichDrawable
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/potato"
                    android:gravity="center"
                    android:text="@string/potato_family"
                    android:textAppearance="?android:textAppearanceLarge"
                    app:compoundDrawableWidth="150dp"/>
            </com.google.android.material.card.MaterialCardView>

        </androidx.gridlayout.widget.GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>